Einschränkung der Währungsländerliste